# moveit_pickplace_demo

./: .gitignore  CLAUDE.md  README.md  package.xml  setup.cfg  setup.py
config/: camera.yaml  controllers.yaml  demo_params.yaml  panda_arm.yaml
launch/: smart_pick_place.launch.py
moveit_grasp_utils/: CMakeLists.txt  package.xml
moveit_grasp_utils/include/moveit_grasp_utils/: workspace_validator.hpp
rviz/: vision_moveit.rviz
simple_moveit_demo/: benchmark.py  camera_simulator.py  grasp_planner.py  shape_classifier.py  smart_pick_place.py  vision_detector.py
src/moveit_grasp_utils/src/: workspace_validator_node.cpp
src/simple_moveit_demo/: .gitignore
src/simple_moveit_demo/config/: demo_params.yaml
src/simple_moveit_demo/launch/: moveit.launch.py  smart_pick_place.launch.py
src/simple_moveit_demo/moveit_grasp_utils/src/: workspace_validator_node.cpp
src/simple_moveit_demo/rviz/: vision_moveit.rviz
src/simple_moveit_demo/simple_moveit_demo/: camera_simulator.py  depth_estimator.py  export_model.py  grasp_angle_rl.py  grasp_planner.py  pick_place_demo.py  scene_manager.py  smart_pick_place.py  vision_detector.py
